--- a/requirements.txt
+++ b/requirements.txt
@@ -1,178 +1,19 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
-appnope==0.1.2
-argcomplete==2.0.0
-asttokens==2.0.5
-async-generator==1.10
-async-timeout==4.0.2
-attrs==21.4.0
-audioread==3.0.0
-av==10.0.0
-backcall==0.2.0
-bark==0.1.5
-base58==2.1.1
-bitarray==1.2.2
-black==21.12b0
-blinker==1.6.2
-boto3==1.28.31
-botocore==1.31.31
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==3.2.0
-click==8.1.7
-coloredlogs==15.0.1
-conv==0.2
-crytic-compile==0.2.3
-ctranslate2==3.18.0
-cytoolz==0.11.2
-debugpy==1.5.1
-decorator==5.1.1
-distlib==0.3.6
-docutils==0.18.1
-einops==0.6.1
-encodec==0.1.1
-entrypoints==0.3
-et-xmlfile==1.1.0
-eth-abi==2.1.1
-eth-account==0.5.7
-eth-hash==0.3.2
-eth-keyfile==0.5.1
-eth-keys==0.3.4
-eth-rlp==0.2.1
-eth-typing==2.3.0
-eth-utils==1.10.0
-executing==0.8.2
-face-detection==0.2.2
-faster-whisper @ https://github.com/guillaumekln/faster-whisper/archive/refs/heads/master.tar.gz#sha256=21f44aa5faedff9c8809e314affbb48c9491907a37f7afa9f804eec008116a9c
-ffmpeg-python==0.2.0
-ffprobe==0.5
-filelock==3.12.3
-Flask==2.3.2
-flatbuffers==23.5.26
-frozenlist==1.3.0
-fsspec==2023.6.0
-funcy==2.0
-future==0.18.3
-h11==0.13.0
-hexbytes==0.2.2
-huggingface-hub==0.16.4
-humanfriendly==10.0
-idna==3.4
-importlib-metadata==6.8.0
-install==1.3.5
-ipfshttpclient==0.8.0a2
-ipykernel==6.7.0
-ipython==8.0.0
-itsdangerous==2.1.2
-jedi==0.18.1
-Jinja2==3.1.2
-jmespath==1.0.1
-joblib==1.3.2
-jsonschema==3.2.0
-jupyter-client==7.1.0
-jupyter-core==4.9.1
-Kivy==2.1.0
-Kivy-Garden==0.1.5
-lazy_loader==0.3
-librosa==0.10.1
-llvmlite==0.40.1
-lru-dict==1.1.7
-lxml==4.7.1
-MarkupSafe==2.1.3
-marlin-pytorch==0.3.2
-matplotlib-inline==0.1.3
-mpmath==1.3.0
-msgpack==1.0.5
-multiaddr==0.0.9
-multidict==6.0.2
-mypy-extensions==0.4.3
-nest-asyncio==1.5.4
-netaddr==0.8.0
-netcat==0.0.1a0
-networkx==3.1
-nltk==3.8.1
-numba==0.57.1
-numpy==1.25.2
-onnxruntime==1.15.1
-opencv-python==4.8.0.76
-openpyxl==3.0.10
-outcome==1.2.0
-packaging==23.1
-pandas==1.4.3
-parsimonious==0.8.1
-parso==0.8.3
-pathspec==0.9.0
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==10.0.0
-pipx==1.0.0
-platformdirs==3.10.0
-pooch==1.7.0
-prettytable==3.4.1
-prompt-toolkit==3.0.24
-protobuf==4.24.2
-ptyprocess==0.7.0
-pure-eval==0.2.1
-py-solc-x==1.1.1
-pycparser==2.21
-pycryptodome==3.14.1
-Pygments==2.11.2
-pyparsing==3.0.7
-PyQt3D==5.15.5
-PyQt5==5.15.7
-PyQt5-sip==12.11.0
-PyQtChart==5.15.6
-PyQtDataVisualization==5.15.5
-PyQtNetworkAuth==5.15.5
-PyQtPurchasing==5.15.5
-PyQtWebEngine==5.15.6
-pyrsistent==0.18.1
-pysha3==1.0.2
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-dotenv==0.19.2
-pytz==2022.2.1
-PyYAML==6.0.1
-pyzmq==22.3.0
-regex==2023.8.8
-requests==2.31.0
-rlp==2.0.1
-s3transfer==0.6.2
-safetensors==0.3.2
-scikit-learn==1.3.0
-scipy==1.11.2
-selenium==4.4.2
-semantic-version==2.9.0
-six==1.16.0
-slither-analyzer==0.8.3
-sniffio==1.2.0
-sortedcontainers==2.4.0
-soundfile==0.12.1
-soxr==0.3.6
-stack-data==0.1.3
-sympy==1.12
-threadpoolctl==3.2.0
-tokenizers==0.13.3
-tomli==1.2.3
-toolz==0.11.2
-torch==2.0.1
-torchaudio==2.0.2
-torchvision==0.15.2
-tornado==6.1
-tqdm==4.66.1
-traitlets==5.1.1
-transformers==4.34.0.dev0
-trio==0.21.0
-trio-websocket==0.9.2
-typing_extensions==4.7.1
-urllib3==2.0.4
-userpath==1.8.0
-varint==1.0.2
-virtualenv==20.16.6
-wcwidth==0.2.5
-web3==5.28.0
-websockets==9.1
-Werkzeug==2.3.7
-wsproto==1.1.0
-yarl==1.7.2
-zipp==3.16.2
+Flask
+numpy
+boto3
+torch>=2.1.1
+transformers>=4.33.3
+datasets
+soundfile
+pydub
+librosa
+scipy
+peft
+optimum
+accelerate
+encodec
+funcy
+tqdm
+huggingface-hub
+datasets
+my-voice-analysis
